--- a/assets/scss/navbar.scss
+++ b/assets/scss/navbar.scss
@@ -51,6 +51,7 @@
     font-weight: $font-weight-medium;
     font-size: 14px;
     position: relative;
+    padding: 0 1rem;
     color: $navbar-light-color;
     &.active,
     &.visited,
@@ -77,7 +78,6 @@
     position: relative;
     color: $navbar-light-color !important;
   }
-  // end Navbar Styles
 
   .td-search-input {
     border: none;
